# Azure-Text-Analytics-API-With-Python

./: .gitignore  AzureTextAnalytics.py  DTO.py  README.md  RetriveAnalysis.py  app.py  docs.md  interections.sqlite  log.txt  pyproject.toml
app/: AzureTextAnalytics.py  __init__.py  app.py  interections.sqlite
app/azure_services/: azure_text_analytics.py
app/database_services/: database_controller.py
app/extensions/: input.css  package-lock.json  package.json  tailwind.config.js
app/models/: Model.py
app/static/: output.css  sendForm.js
app/templates/: index.html
